fix(identity): repair end-to-end OAuth token flow
The authorization_code flow (authorize -> login -> consent -> code ->
token -> id_token -> introspect -> RP logout) was broken end-to-end on
master. B2/B3 tests only covered discovery/JWKS/consent-persistence, so
6 stacked latent bugs shipped unfixed. Found by a manual e2e smoke.

- consent page 403: /oauth2/consent fell to the @Order(5) denyAll chain;
  add it to permitAll (SecurityConfig)
- JDBC round-trip 500: ProjectUserPrincipal, its authorities collection
  (ImmutableCollections$List12) and token-claim values (java.lang.Long,
  java.net.URL) were denied by SAS's BasicPolymorphicTypeValidator on
  findByToken (broke consent grant, token exchange, introspect, RP
  logout). Build a JsonMapperOAuth2AuthorizationRowMapper whose validator
  allows our types; store authorities as Collections.unmodifiableList
  (an allow-listed, JDK-Serializable type)
- invalid_client: client secrets were stored "{bcrypt}"+hash but the
  PasswordEncoder bean is a plain BCryptPasswordEncoder, so SAS rejected
  them. Store without prefix, consistent with ProjectUser passwords
- authenticationTime cannot be null: Spring Security 7 derives id_token
  auth_time from a FactorGrantedAuthority.issuedAt; the manual
  ProjectSessionAuthenticator did not add one. Add FACTOR_PASSWORD

Regression: OAuthPersistenceIntegrationTests now round-trips a real
ProjectUserPrincipal + Long claim through the JDBC service (the exact gap
that let this slip). Updated OidcRegisteredClientBootstrapTests and
ProjectSessionAuthenticatorTests to the corrected behavior.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>